@@ -2,7 +2,7 @@ package com.gigabank;
 
 import com.gigabank.models.entity.BankAccount;
 import com.gigabank.models.entity.User;
-import com.gigabank.service.UserService;
+import com.gigabank.service.user.UserService;
 import com.gigabank.service.account.BankAccountService;
 import com.gigabank.service.account.BankAccountOperationService;
 import org.springframework.boot.SpringApplication;
@@ -27,10 +27,10 @@ public class BankSystemApp {
         User user1 = userService.createUserEntity("Bob", "bob@gmail.com", "+7 (900) 777-77-77");
         User user2 = userService.createUserEntity("Tom", "tom@gmail.com", "+7 (900) 666-00-00");
 
-        BankAccount bankAccount1user1 = user1.getListBankAccounts().getFirst();
+        BankAccount bankAccount1user1 = user1.getListBankAccounts().get(0);
         BankAccount bankAccount2user1 = bankAccountService.createAccountEntity(user1);
 
-        BankAccount bankAccount1user2 = user2.getListBankAccounts().getFirst();
+        BankAccount bankAccount1user2 = user2.getListBankAccounts().get(0);
         BankAccount bankAccount2user2 = bankAccountService.createAccountEntity(user2);
 
         bankAccountOperationService.deposit(bankAccount1user1.getId(), BigDecimal.valueOf(700));
